--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,7 +2,9 @@
 
 # typing
 mypy~=0.931
+typing-extensions~=4.0.1
 sqlalchemy-stubs~=0.4
 types-markdown~=3.3.12
 types-Flask-SQLAlchemy~=2.5.1
 types-pytz~=2021.3.4
+types-pyOpenSSL~=22.0.0
