fix mypy errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,10 @@
 [mypy]
 files = src/**/*.py
+mypy_path = $MYPY_CONFIG_FILE_DIR/stubs
 plugins = sqlmypy
-strict = 1
-implicit_reexport = 1
+strict = True
+implicit_reexport = True
+show_error_codes = True
+
+[mypy-src.api.*]
+disallow_untyped_decorators = False
