make mypy happy

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,17 @@
 [mypy]
 files = src/**/*.py, *.py
 mypy_path = $MYPY_CONFIG_FILE_DIR/stubs
-plugins = sqlmypy
+plugins = sqlalchemy.ext.mypy.plugin
 strict = True
 implicit_reexport = True
 show_error_codes = True
+ignore_missing_imports = True
 
 [mypy-src.api.*]
+disallow_untyped_decorators = False
+
+[mypy-src.store.*]
+disallow_untyped_decorators = False
+
+[mypy-src.admin.*]
 disallow_untyped_decorators = False
