--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,10 +1,11 @@
 -r requirements.txt
 
 # typing
-mypy~=0.931
+mypy~=0.982
+sqlalchemy2-stubs~=0.0.2a29
 typing-extensions~=4.0.1
-sqlalchemy-stubs~=0.4
 types-markdown~=3.3.12
 types-Flask-SQLAlchemy~=2.5.1
 types-pytz~=2021.3.4
 types-pyOpenSSL~=22.0.0
+types-psutil~=5.9.5.4
