--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,7 @@ files = src/**/*.py, *.py
 mypy_path = $MYPY_CONFIG_FILE_DIR/stubs
 plugins = sqlalchemy.ext.mypy.plugin
 strict = True
+warn_return_any = False
 implicit_reexport = True
 show_error_codes = True
 ignore_missing_imports = True
