align mypy behavior with dmypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,6 +7,7 @@ warn_return_any = False
 implicit_reexport = True
 show_error_codes = True
 ignore_missing_imports = True
+local_partial_types = True
 
 [mypy-src.api.*]
 disallow_untyped_decorators = False
