--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
 -r requirements.txt
 
 # typing
-mypy~=1.6.1
-typing-extensions~=4.7.1
-types-markdown~=3.3.12
-types-pytz~=2021.3.4
-types-pyOpenSSL~=22.0.0
-types-psutil~=5.9.5.4
+mypy~=1.10.0
+typing-extensions~=4.12.2
+types-markdown
+types-pytz
+types-pyOpenSSL
+types-psutil
